<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/gray_line">
    <!--这是确认签收的activity的布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/goods_title"
        android:background="@color/login_btn_pink">
        <RelativeLayout
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iamge"
                android:layout_centerInParent="true"
                android:layout_width="16dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:src="@drawable/navigation_back"/>
            <TextView
                android:layout_centerVertical="true"
                android:text="@string/app_back_text"
                android:layout_toRightOf="@id/iamge"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/buyer_order5"/>
        <TextView
            android:id="@+id/confirm_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:padding="3dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_confirm_text"/>

    </RelativeLayout>
    <EditText
        android:background="@drawable/bg_solid_white"
        android:id="@+id/confirm_text"
        android:hint="@string/buyer_order3"
        android:gravity="top|left"
        android:textSize="16sp"
        android:maxLength="250"
        android:lines="8"
        android:maxLines="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:textSize="12sp"
        android:textColor="@color/gray_item_text_n"
        android:text="@string/buyer_order4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>