<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/goods_color_text"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <com.meilicat.basedemo.view.FlowLayout
            android:id="@+id/goods_filter_color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/goods_size_text"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <com.meilicat.basedemo.view.FlowLayout
            android:id="@+id/goods_filter_size_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/goods_filter_cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_cancel_text"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/goods_filter_confirm_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_confirm_text"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>