<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:wheel="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/goods_title"
        android:background="@color/login_btn_pink">
        <RelativeLayout
            android:id="@+id/buyer_unhandler_title_back"
            android:layout_width="60dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iamge"
                android:layout_centerInParent="true"
                android:layout_width="16dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:src="@drawable/navigation_back"/>
            <TextView
                android:layout_centerVertical="true"
                android:text="@string/app_back_text"
                android:layout_toRightOf="@id/iamge"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/buyer_order1"/>
        <TextView
            android:id="@+id/buyer_unhandler_title_name"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="3dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyer_order6"/>

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/buyer_unhandler_tabcontainer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/goods_title"
            android:background="@color/tab_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/buyer_handler_1"
                android:textSize="15sp"
                android:id="@+id/buyer_unhandler_tabcontainer_r1"
                android:paddingTop="5dp"
                android:checked="true"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:button="@null"
                android:textColor="@drawable/custom_button_selector"
                android:background="@drawable/custom_button_bg_selector"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="45dp"/>
            <RadioButton
                android:text="@string/buyer_unhandler_1"
                android:textSize="15sp"
                android:id="@+id/buyer_unhandler_tabcontainer_r2"
                android:paddingTop="5dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:button="@null"
                android:textColor="@drawable/custom_button_selector"
                android:background="@drawable/custom_button_bg_selector"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="45dp"/>
            <RadioButton
                android:text="@string/buyer_unhandler_2"
                android:textSize="15sp"
                android:id="@+id/buyer_unhandler_tabcontainer_r3"
                android:paddingTop="5dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:button="@null"
                android:textColor="@drawable/custom_button_selector"
                android:background="@drawable/custom_button_bg_selector"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="45dp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/buyer_unhandler_today_num"
                    android:text="0"
                    android:textSize="13sp"
                    android:textColor="@color/gray_item_text_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/buyer_unhandler_week_num"
                    android:text="0"
                    android:textSize="13sp"
                    android:textColor="@color/gray_item_text_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/buyer_unhandler_history_num"
                    android:text="0"
                    android:textSize="13sp"
                    android:textColor="@color/gray_item_text_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.cjj.MaterialRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/order_commont_refresh"
            android:orientation="vertical"
            app:isLoadMore="true"
            app:overlay="true"
            app:wave_color="@android:color/transparent"
            app:wave_show="true"
        >
      <!--  <ListView
            android:id="@+id/buyer_unhandler_lv"
            android:background="@color/gray_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>-->
            <com.meilicat.basedemo.view.AnimatedExpandableListView
                android:id="@+id/buyer_unhandler_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#EEEEEE">
            </com.meilicat.basedemo.view.AnimatedExpandableListView>
    </com.cjj.MaterialRefreshLayout>
        <!--<ProgressBar
            android:layout_gravity="center"
            android:id="@+id/buyer_unhandler_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/layerlist_pb_big"
            android:layout_centerInParent="true"
            android:indeterminateBehavior="repeat" />-->
        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/buyer_unhandler_loading"
            android:visibility="visible"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            wheel:matProg_barColor="@color/login_btn_pink"
            wheel:matProg_progressIndeterminate="true"/>

        <LinearLayout
            android:id="@+id/buyer_unhandler_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/load_fail" />

            <Button
                android:id="@+id/error_btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_solid_pink"
                android:text="@string/home_fragment_loading_error"
                android:textColor="#fff"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buyer_unhandler_empty"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView

                android:src="@mipmap/load_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/string_empty"
                android:textColor="@color/gray_item_text_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </FrameLayout>

</LinearLayout>